implemented feature request [3149103 - Broadcast jobs]